# xorg-setxkbmap

./: .cvsignore  .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  autogen.sh  configure.ac  setxkbmap.c  setxkbmap.man
man/: setxkbmap.man
